style.css
/* ... */
#adknownInfoCover.show, #g42InfoCover.show, #tulipInfoCover.show {
    display: flex;
}

#jobTiles h3 {
    margin-bottom: 15px;
    font-size: 20px;
}

#jobTiles ul {
    margin-top: -8px;
    margin-left: 15px;
}

#jobTiles ul li {
    padding: 5px 0px;
}

#jobTiles a {
    margin-top: 20px;
    width: 100%;
    text-align: right;
    cursor: pointer;
}

#contact {
    background-color: #323031;
}

#contactFormContainer {
    text-align: center;
    margin: 0 22.5vw;
}

@media (max-width: 1200px) {
    #contactFormContainer {
        text-align: center;
        margin: 10vh 10vw;
    }
}

#contactContent {
    padding: 10px 50px;
    width: 100vw;
    justify-content: center;
}

input, textarea {
    color: #edf0f1;
    font-family: 'Helvetica Neue', sans-serif;
    font-weight: 300;
    font-size: 18px;
    border-radius: 8px;
    line-height: 22px;
    background-color: transparent;
    border: 2px solid #edf0f1;
    padding: 13px;
    margin-bottom: 35px;
    width: 100%;
    outline: 0;
}

textarea {
    height: 30vh;
    line-height: 1.5rem;
    resize: vertical;
}

#submitButton {
    margin-top: -15px;
    font-family: 'Montserrat', sans-serif;
    font-size: 24px;
    font-weight: 900;
    color: #323031;
    border: 0;
    background-color: #edf0f1;
    cursor: pointer;
    padding: 10px 0;
}

#loader {
    margin-top: -15px;
    border: 4px solid #edf0f1;
    border-top: 4px solid #323031;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    animation: spin 0.8s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.inputGroup {
    position: relative;
    color: #edf0f1;
    font-family: 'Helvetica Neue', sans-serif;
    font-weight: 300;
    font-size: 18px;
    align-items: center;
}

.floatingLabel {
    font-size: 18px;
    position: absolute;
    pointer-events: none;
    top: 15px;
    left: 12px;
    transition: all 0.3s ease;
    opacity: 0.7;
    font-weight: 300;
}

input:focus ~ .floatingLabel,
textarea:focus ~ .floatingLabel,
input:not(:focus):valid ~ .floatingLabel,
textarea:not(:focus):valid ~ .floatingLabel {
    top: -25px;
    bottom: 0px;
    left: 3px;
    font-size: 16px;
    font-weight: 200;
    opacity: 0.9;
}

#contactHeader {
    font-size: 15vh;
    font-weight: bolder;
    font-family: 'Montserrat', sans-serif;
    text-shadow: black 3px 3px;
    margin: 20px 0 40px 0;
    color: #edf0f1;
    text-align: center;
    width: 100%;
}

@media (max-width: 480px) {
    #contactContent {
        padding: 20px;
    }
    #contactHeader {
        font-size: 55px;
        margin: 10px 0 20px 0;
        color: #edf0f1;
        text-shadow: 0;
        text-align: left;
    }
}

@media (min-width: 480px) and (max-width: 960px) {
    .aboutHeader, #experienceHeader, #contactHeader {
        font-size: 10vh;
    }
}

#successOverlay, #failureOverlay {
    color: #edf0f1;
    font-size: 30px;
    flex-direction: column;
    text-align: center;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
    transition: all 0.3s ease;
}

#backButton {
    width: 30vw;
    margin-top: 30px;
    font-size: 24px;
    font-weight: 600;
    font-family: 'Montserrat', sans-serif;
    border-radius: 9px;
    border: 0;
    padding: 15px;
    cursor: pointer;
}

small {
    line-height: 1.5rem;
    font-size: 15px;
    margin-top: 15px;
}

#reportContent {
    display: block;
    justify-content: center;
    width: 55%;
    margin-top: 15vh;
    margin-left: 22.5vw;
    margin-right: 22.5vw;
    padding: 50px;
    text-align: justify;
}

@media (max-width: 1080px) {
    #reportContent {
        width: 98%;
        margin-left: 1vw;
        margin-right: 1vw;
    }
}

#reportContent a {
    color: black;
}

#reportContent h1 {
    font-family: fell, Georgia, "Times New Roman", Times, serif;
    font-size: 48px;
    font-weight: 400;
    text-align: center;
    margin-bottom: 10px;
}

#reportContent h2 {
    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 22px;
    font-weight: 200;
    text-align: center;
    color: #757575;
}

hr {
    margin: 40px;
    border-bottom: none;
}

#reportContent h3 {
    margin-top: 40px;
    padding: 5px 0;
    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 30px;
    font-weight: 500;
}

.reportText {
    font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
    font-size: 21px;
    font-weight: 400;
    line-height: 32px;
}

#reportContent img:not(#me) {
    display: block;
    padding: 20px 0px;
}

#me {
    display: block;
    padding-top: 20px;
}

